# ETL

./: README.md
.devcontainer/: Dockerfile  postCreate.sh
ETL/: ETL.opam  dune-project
ETL/_build/: .db  .digest-db  log
ETL/_build/default/.dune/: configurator  configurator.v2
ETL/_build/default/lib/: hello.cmxa
ETL/_build/default/lib/.hello.objs/byte/: hello.cmi  hello.cmo  hello.cmt
ETL/_build/default/lib/.hello.objs/native/: hello.cmx
ETL/_build/default/lib/.merlin-conf/: lib-ETL.hello
ETL/data/: complete_physical_orders.csv  order_summary.csv  order_summary.db
ETL/lib/: db.ml  dune  etl.ml  etl.mli  filter.ml  helper.ml  reader.ml  transform.ml  types.ml  writer.ml
ETL/test/: dune  test_filter.ml  test_helper.ml  test_transform.ml
