(lang dune 3.17)

(name etl)

(generate_opam_files true)

(source
 (github lorrancmlopes/ETL))

(authors "Lorran Lopes <lorrancml@al.insper.edu.br>")

(maintainers "Lorran Lopes <lorrancml@al.insper.edu.br>")

(license MIT)

(documentation https://github.com/lorrancmlopes/ETL)

(package
 (name etl)
 (synopsis "ETL process for orders and order items")
 (description "ETL process for orders and order items")
 (depends ocaml
   dune 
   csv curl
   (ounit2 :with-test))
 (tags
  ("ETL" "orders" "order items"))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
)